added sections to assign out

--- a/index.html
+++ b/index.html
@@ -131,6 +131,24 @@
     </button>
   </div>
 
+
+  <!-- Button section (Entertainment, Agency, Brand Partnerships) -->
+
+
+
+  <!-- Testimonial section -->
+
+
+
+  <!-- Contact section -->
+
+
+
+  <!-- Footer section -->
+
+
+
+
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
