added button section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-  <title>Tiny Horse</title>
+  <title>Home | Entertainment, Brand & Agency Services | Tiny Horse</title>
 </head>
 
 <body>
@@ -67,9 +67,6 @@
       <p>__</p>
     </div>
   </div>
-
-
-
 
 
   <!-- Carousel -->
@@ -134,7 +131,32 @@
 
 
   <!-- Button section (Entertainment, Agency, Brand Partnerships) -->
-
+  <div class="btn_section">
+    <h4 class="btn_intro">
+      We are three distinct, but interconnected divisions that support, 
+      leverage, and complement each other to create what’s next.
+    </h4>
+    <div class="btn_div">
+      <div class="btn_container">
+        <button class="btn" type="submit">Entertainment</button>
+        <p class="btn_msg">
+          Producing and distributing long- and short-form content.
+        </p>
+      </div>
+      <div class="btn_container">
+        <button class="btn" type="submit">Agency</button>
+        <p class="btn_msg">
+          Amplifying brands through strategy, media, and creative services.
+        </p>
+      </div>
+      <div class="btn_container">
+        <button class="btn" type="submit">Brand Partnerships</button>
+        <p class="btn_msg">
+          Connecting brands with relevant partners and platforms.
+        </p>
+      </div>
+    </div>
+  </div>
 
 
   <!-- Testimonial section -->
@@ -143,7 +165,6 @@
 
   <!-- Contact section -->
 
-  <br>
   <div class="contact">
 
     <h5 class="contact_font">CONTACT</h4>
